# scars-of-leetcode

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL.md  README.md  SECURITY.md  config.py  main.py  new-problem.sh  pyproject.toml  requirements.txt  scarleet.toml
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: codeql.yml  pre-commit.yml
.scarleet/lists/: blind75.json  neetcode150.json
anki/: scars-of-leetcode.json
commands/: docgen_cmd.py  flashcards_cmd.py  new_cmd.py  setup_cmd.py  status_cmd.py
core/: anki.py  leetcode_api.py  slm.py
problems/: README.md
problems/0001-two-sum/: README.md  cards.json  solution.py
problems/0019-remove-nth-node-from-end-of-list/: README.md  cards.json  solution.py
problems/0020-valid-parentheses/: README.md  solution.py
problems/0021-merge-two-sorted-lists/: README.md  cards.json  solution.py
problems/0141-linked-list-cycle/: README.md  cards.json  solution.py
problems/0206-reverse-linked-list/: README.md  solution.py
problems/0217-contains-duplicate/: README.md  cards.json  solution.py
problems/0707-design-linked-list/: README.md  alternate_solution.py  cards.json  solution.py
problems/0876-middle-of-the-linked-list/: README.md  cards.json  solution.py
problems/1-two-sum/: README.md  metadata.json  solution.py  test_cases.py
problems/11-container-with-most-water/: metadata.json  (+1 more)
prompts/: autofill-problem-readme.txt  create-update-anki-json.txt
scarleet/: cli.py
scripts/: create_import_anki_flashcards.py
(+14 files in other folders)
